keep struggle with "vue-svg-loader" (add some code in babel.comfig.js / create vue.config.js / etc.)

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Under Construction Hero</title>
+    <title>Under Construction Heroes</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2c5219df41.js" crossorigin="anonymous"></script>
